--- a/ChronoKeep/UI/Import/ImportFilePage2Alt.xaml
+++ b/ChronoKeep/UI/Import/ImportFilePage2Alt.xaml
@@ -15,12 +15,16 @@
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
         <Label Content="Select distances to link to those found in file." FontSize="16" Margin="10,0,10,0" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" HorizontalContentAlignment="Center"/>
-        <ListBox x:Name="distanceListBox" KeyboardNavigation.TabNavigation="Continue" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" IsTabStop="False" Grid.Row="1">
-            <ListBox.ItemContainerStyle>
-                <Style TargetType="ListBoxItem">
-                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                </Style>
-            </ListBox.ItemContainerStyle>
+        <ListBox
+            x:Name="distanceListBox"
+            KeyboardNavigation.TabNavigation="Continue"
+            HorizontalContentAlignment="Stretch"
+            VerticalContentAlignment="Stretch"
+            IsTabStop="False"
+            Grid.Row="1"
+            Background="Transparent"
+            ItemContainerStyle="{StaticResource NoFocusListBoxItem}"
+            >
         </ListBox>
     </Grid>
 </Page>
