--- a/ChronoKeep/UI/Export/ExportResults.xaml
+++ b/ChronoKeep/UI/Export/ExportResults.xaml
@@ -17,7 +17,14 @@
                 <RowDefinition Height="55"/>
             </Grid.RowDefinitions>
             <Label Content="Content to Export" FontSize="16" VerticalAlignment="Center" HorizontalContentAlignment="Center" Grid.Row="0" Margin="0,-15,0,0"/>
-            <ListBox Name="headersList" Margin="5,0,5,5" BorderThickness="0" Grid.Row="1"/>
+            <ListBox
+                Name="headersList"
+                Margin="5,0,5,5"
+                BorderThickness="0"
+                Grid.Row="1"
+                Background="Transparent"
+                ItemContainerStyle="{StaticResource NoFocusListBoxItem}"
+                />
             <Grid Grid.Row="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*"/>
