--- a/ChronoKeep/UI/MainPages/AgeGroupsPage.xaml
+++ b/ChronoKeep/UI/MainPages/AgeGroupsPage.xaml
@@ -31,13 +31,8 @@
                 ScrollViewer.CanContentScroll="False"
                 PreviewMouseWheel="AgeGroupsBox_PreviewMouseWheel"
                 Background="Transparent"
+                ItemContainerStyle="{StaticResource NoFocusListBoxItem}"
                 >
-                <ListBox.ItemContainerStyle>
-                    <Style TargetType="ListBoxItem">
-                        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                        <Setter Property="VerticalContentAlignment" Value="Stretch"/>
-                    </Style>
-                </ListBox.ItemContainerStyle>
             </ListBox>
             <DockPanel LastChildFill="False" Grid.Row="2" HorizontalAlignment="Center">
                 <Button Name="Add" Content="Add Group" Margin="10,5,10,5" FontSize="16" Height="35" Width="150" Click="Add_Click"/>
