--- a/ChronoKeep/UI/MainPages/MinTimingPage.xaml
+++ b/ChronoKeep/UI/MainPages/MinTimingPage.xaml
@@ -44,13 +44,9 @@
                     Height="170"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.VerticalScrollBarVisibility="Visible"
+                    Background="Transparent"
+                    ItemContainerStyle="{StaticResource NoFocusListBoxItem}"
                     >
-                <ListBox.ItemContainerStyle>
-                    <Style TargetType="ListBoxItem">
-                        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                        <Setter Property="VerticalContentAlignment" Value="Stretch" />
-                    </Style>
-                </ListBox.ItemContainerStyle>
             </ListBox>
         </Expander>
         <Frame
