--- a/ChronoKeep/UI/Timing/AlarmsPage.xaml
+++ b/ChronoKeep/UI/Timing/AlarmsPage.xaml
@@ -37,6 +37,8 @@
             ScrollViewer.CanContentScroll="False"
             PreviewMouseWheel="AlarmsBox_PreviewMouseWheel"
             Margin="0"
+            Background="Transparent"
+            ItemContainerStyle="{StaticResource NoFocusListBoxItem}"
             >
         </ListBox>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="2">
