Added global styling templates to fix some issues with ListViews and ListBoxes and their children when they were not supposed to be able to be selected. Added some styling rules to ensure MaskedTextBox fit in with the rest of the crew. Moved alternatingStyle from every file it was used in to the App.xaml file to remove some code duplication. Modified the about page to slightly change its look.

--- a/ChronoKeep/UI/Announcer/AnnouncerWindow.xaml
+++ b/ChronoKeep/UI/Announcer/AnnouncerWindow.xaml
@@ -15,15 +15,6 @@
         WindowStartupLocation="CenterScreen"
         >
     <Grid>
-        <Grid.Resources>
-            <Style TargetType="ListViewItem" x:Key="alternatingStyle">
-                <Style.Triggers>
-                    <Trigger Property="ItemsControl.AlternationIndex" Value="1">
-                        <Setter Property="Background" Value="#48A6A6A6" />
-                    </Trigger>
-                </Style.Triggers>
-            </Style>
-        </Grid.Resources>
         <Grid.RowDefinitions>
             <RowDefinition Height="30" />
             <RowDefinition Height="35" />
@@ -70,7 +61,7 @@
             ScrollViewer.HorizontalScrollBarVisibility="Disabled" 
             Visibility="Collapsed"
             AlternationCount="2"
-            ItemContainerStyle="{StaticResource alternatingStyle}"
+            ItemContainerStyle="{StaticResource announcerStyle}"
             Margin="10,0"
             >
             <ListView.ItemTemplate>
@@ -102,7 +93,7 @@
             ScrollViewer.CanContentScroll="True"
             ScrollViewer.HorizontalScrollBarVisibility="Disabled"
             AlternationCount="2"
-            ItemContainerStyle="{StaticResource alternatingStyle}"
+            ItemContainerStyle="{StaticResource announcerStyle}"
             Margin="10,0"
             >
             <ListView.ItemTemplate>
