--- a/ChronoKeep/App.xaml
+++ b/ChronoKeep/App.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Chronokeep"
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              >
     <Application.Resources>
         <ResourceDictionary>
@@ -10,6 +11,61 @@
                 <ui:ThemesDictionary Theme="Dark"/>
                 <ui:ControlsDictionary />
             </ResourceDictionary.MergedDictionaries>
+            <Style TargetType="ListViewItem" x:Key="NoFocusListViewItem">
+                <Setter Property="Focusable" Value="False" />
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate>
+                            <ContentPresenter Content="{Binding Content, RelativeSource={RelativeSource TemplatedParent}}" />
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+            <Style TargetType="ListViewItem" x:Key="alternatingStyle">
+                <Style.Triggers>
+                    <Trigger Property="ItemsControl.AlternationIndex" Value="1">
+                        <Setter Property="Background" Value="#48A6A6A6" />
+                    </Trigger>
+                </Style.Triggers>
+            </Style>
+            <Style TargetType="ListViewItem" x:Key="announcerStyle">
+                <Setter Property="Focusable" Value="False" />
+                <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                <Style.Triggers>
+                    <Trigger Property="ItemsControl.AlternationIndex" Value="1">
+                        <Setter Property="Background" Value="#48A6A6A6" />
+                    </Trigger>
+                </Style.Triggers>
+            </Style>
+            <Style TargetType="ListBoxItem" x:Key="NoFocusListBoxItem">
+                <Setter Property="Focusable" Value="False" />
+                <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate>
+                            <ContentPresenter Content="{Binding Content, RelativeSource={RelativeSource TemplatedParent}}" />
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+            <Style TargetType="ListView">
+                <Setter Property="Background" Value="{DynamicResource ApplicationBackgroundBrush}" />
+                <Setter Property="BorderThickness" Value="0" />
+            </Style>
+            <Style TargetType="TextBlock">
+                <Setter Property="Foreground" Value="{DynamicResource TextFillColorPrimaryBrush}" />
+            </Style>
+            <Style TargetType="xctk:MaskedTextBox">
+                <Setter Property="BorderThickness" Value="0,0,0,1" />
+                <Setter Property="Background" Value="{DynamicResource ControlFillColorDefaultBrush}" />
+                <Setter Property="Foreground" Value="{DynamicResource TextFillColorPrimaryBrush}" />
+                <Setter Property="CaretBrush" Value="{DynamicResource TextFillColorPrimaryBrush}" />
+                <Style.Triggers>
+                    <Trigger Property="IsFocused" Value="True">
+                        <Setter Property="Background" Value="{DynamicResource ApplicationBackgroundBrush}" />
+                    </Trigger>
+                </Style.Triggers>
+            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
