--- a/ChronoKeep/UI/API/RemoteReadersWindow.xaml
+++ b/ChronoKeep/UI/API/RemoteReadersWindow.xaml
@@ -32,7 +32,12 @@
                 <TextBlock Text="Loading..." FontSize="36" Margin="5,5,5,5" TextAlignment="Center"/>
                 <ui:ProgressRing IsIndeterminate="True" Margin="5,5,5,5"/>
             </StackPanel>
-            <ListView x:Name="apiListView" Visibility="Collapsed" Margin="10,0,10,10"/>
+            <ListView
+                x:Name="apiListView"
+                Visibility="Collapsed"
+                Margin="10,0,10,10"
+                ItemContainerStyle="{DynamicResource NoFocusListViewItem}"
+                />
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <Button x:Name="CloseButton" Content="Close" Click="Close_Click" Height="35" Width="150" HorizontalAlignment="Center" Margin="20,0,10,20" />
             </StackPanel>
