--- a/ChronoKeep/UI/MainPages/DistancesPage.xaml
+++ b/ChronoKeep/UI/MainPages/DistancesPage.xaml
@@ -9,7 +9,6 @@
       d:DesignHeight="450"
       d:DesignWidth="800"
       Title="DistancesPage"
-      Foreground="{DynamicResource TextFillColorPrimaryBrush}"
       >
     <Grid>
         <TextBlock Name="nothing" Text="Event not set. Please choose an event before selecting this option." Visibility="Collapsed" />
@@ -18,13 +17,16 @@
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="55"/>
             </Grid.RowDefinitions>
-            <ListBox Name="DistancesBox" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Center" KeyboardNavigation.TabNavigation="Continue" Grid.Row="0" ScrollViewer.CanContentScroll="False" PreviewMouseWheel="DistanceBox_PreviewMouseWheel">
-                <ListBox.ItemContainerStyle>
-                    <Style TargetType="ListBoxItem">
-                        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                        <Setter Property="VerticalContentAlignment" Value="Stretch"/>
-                    </Style>
-                </ListBox.ItemContainerStyle>
+            <ListBox
+                Name="DistancesBox"
+                HorizontalContentAlignment="Stretch"
+                VerticalContentAlignment="Center"
+                KeyboardNavigation.TabNavigation="Continue"
+                Grid.Row="0"
+                ScrollViewer.CanContentScroll="False"
+                PreviewMouseWheel="DistanceBox_PreviewMouseWheel"
+                ItemContainerStyle="{StaticResource NoFocusListBoxItem}"
+                >
             </ListBox>
             <DockPanel Grid.Row="1" HorizontalAlignment="Center">
                 <DockPanel x:Name="apiPanel" Visibility="Collapsed" HorizontalAlignment="Center">
