--- a/ChronoKeep/UI/MainPages/SegmentsPage.xaml
+++ b/ChronoKeep/UI/MainPages/SegmentsPage.xaml
@@ -10,7 +10,6 @@
       d:DesignWidth="800"
       Title="SegmentsPage"
       Loaded="Page_Loaded"
-      Foreground="{DynamicResource TextFillColorPrimaryBrush}"
       >
     <Grid>
         <TextBlock Name="nothing" Text="Event not set. Please choose an event before selecting this option." Visibility="Collapsed" />
@@ -19,18 +18,14 @@
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="55"/>
             </Grid.RowDefinitions>
-            <ListBox Name="SegmentsBox"
-                     KeyboardNavigation.TabNavigation="Continue"
-                     Grid.Row="0"
-                     ScrollViewer.CanContentScroll="False"
-                     PreviewMouseWheel="SegmentsBox_PreviewMouseWheel"
-                     >
-                <ListBox.ItemContainerStyle>
-                    <Style TargetType="ListBoxItem">
-                        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                        <Setter Property="VerticalContentAlignment" Value="Stretch"/>
-                    </Style>
-                </ListBox.ItemContainerStyle>
+            <ListBox
+                Name="SegmentsBox"
+                KeyboardNavigation.TabNavigation="Continue"
+                Grid.Row="0"
+                ScrollViewer.CanContentScroll="False"
+                PreviewMouseWheel="SegmentsBox_PreviewMouseWheel"
+                ItemContainerStyle="{StaticResource NoFocusListBoxItem}"
+                >
             </ListBox>
             <DockPanel Grid.Row="1" HorizontalAlignment="Center">
                 <DockPanel x:Name="apiPanel" Visibility="Collapsed" HorizontalAlignment="Center">
