--- a/ChronoKeep/UI/MainPages/SettingsPage.xaml
+++ b/ChronoKeep/UI/MainPages/SettingsPage.xaml
@@ -60,7 +60,7 @@
                 <ColumnDefinition Width="4*"/>
                 <ColumnDefinition Width="300"/>
             </Grid.ColumnDefinitions>
-            <ScrollViewer VerticalScrollBarVisibility="Visible">
+            <ScrollViewer VerticalScrollBarVisibility="Visible" Padding="5,0,5,5">
                 <StackPanel Grid.Column="0">
                     <DockPanel>
                         <TextBlock Text="Company Name" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
@@ -180,9 +180,9 @@
                 </StackPanel>
             </ScrollViewer>
             <StackPanel Grid.Column="1">
-                <CheckBox Name="UpdatePage" Content="Auto-save changes?" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" />
-                <CheckBox Name="ExitNoPrompt" Content="Never prompt before exit?" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" />
-                <CheckBox Name="CheckUpdates" Content="Check for updates?" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" />
+                <CheckBox Name="UpdatePage" Content="Auto-save changes" FontSize="14" Margin="10,10,10,10" HorizontalAlignment="Left" VerticalContentAlignment="Center" />
+                <CheckBox Name="ExitNoPrompt" Content="Do not prompt before exit" FontSize="14" Margin="10,10,10,10" HorizontalAlignment="Left" VerticalContentAlignment="Center" />
+                <CheckBox Name="CheckUpdates" Content="Check for updates" FontSize="14" Margin="10,10,10,10" HorizontalAlignment="Left" VerticalContentAlignment="Center" />
             </StackPanel>
         </Grid>
     </Grid>
