--- a/ChronoKeep/UI/MainPages/TimingPage.xaml
+++ b/ChronoKeep/UI/MainPages/TimingPage.xaml
@@ -11,7 +11,6 @@
         d:DesignWidth="1000"
         Title="TimingPage"
         Loaded="Page_Loaded"
-        Foreground="{DynamicResource TextFillColorPrimaryBrush}"
         >
     <Grid>
         <Grid.RowDefinitions>
@@ -265,7 +264,7 @@
                                     VerticalAlignment="Center"
                                     />
                             </Grid>
-                            <ListView 
+                            <ListView
                                 x:Name="statsListView" 
                                 VerticalAlignment="Stretch"
                                 HorizontalAlignment="Stretch"
@@ -275,7 +274,8 @@
                                 MouseDoubleClick="StatsListView_MouseDoubleClick"
                                 ScrollViewer.CanContentScroll="False"
                                 ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                                PreviewMouseWheel="statsListView_PreviewMouseWheel">
+                                PreviewMouseWheel="statsListView_PreviewMouseWheel"
+                                >
                                 <ListView.ItemTemplate>
                                     <DataTemplate>
                                         <Grid>
@@ -327,7 +327,8 @@
                                                 Margin="2,4"
                                                 Text="{Binding Total}"
                                                 FontSize="12" 
-                                                VerticalAlignment="Center"/>
+                                                VerticalAlignment="Center"
+                                                />
                                         </Grid>
                                     </DataTemplate>
                                 </ListView.ItemTemplate>
@@ -599,13 +600,8 @@
                     Height="170"
                     ScrollViewer.CanContentScroll="false"
                     ScrollViewer.VerticalScrollBarVisibility="Visible"
+                    ItemContainerStyle="{StaticResource NoFocusListBoxItem}"
                     >
-                    <ListBox.ItemContainerStyle>
-                        <Style TargetType="ListBoxItem">
-                            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                            <Setter Property="VerticalContentAlignment" Value="Stretch" />
-                        </Style>
-                    </ListBox.ItemContainerStyle>
                 </ListBox>
             </Expander>
             <Frame
